--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'posts.css' %}">
       <meta charset="UTF-8">
     <title>{% block title %}Home Page{% endblock %}</title>
 </head>
 <body>
   {%block errors%}
   {% for field in form.fields %}
-    <div>{{ field }}</div>
     {% if field.errors %}
             <div class="alert alert-danger">
                 {{ field.errors }}
             </div>
-    {% else %}
-            <div>
-                non errors find
-            </div>
     {% endif %}
-{% endfor %}
-{{ form.non_field_errors }}
-<div>
-    {{ form.is_bound }}
-</div>
-{{form.errors}}
+  {% endfor %}
+  {{ form.non_field_errors }}
+  {% if not form.is_bound %}
+  {% endif %}
+  {{form.errors}}
   {%endblock%}
     {%block header%}
-    <header class="p-2 bg-dark text-white">
+    <header>
+      <nav class="navbar navbar-fixed-top bg-dark text-white ">
         <div class="container-fluid">
           <div class="d-flex flex-wrap align-items-center justify-content-end ">
             <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
@@ -36,6 +34,7 @@
             </a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-end mb-md-0">
               <li><a href="{% url 'main:home' %}" class="nav-link px-2 text-secondary">Home</a></li>
+              <li><a href="{% url 'main:posts' %}" class="nav-link px-2 text-white">Posts</a></li>
               <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
               <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
               <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
@@ -80,8 +79,10 @@
               {%endif%}
           </div>
         </div>
-      </header>
+      </nav>
+    </header>
     {%endblock%}
+
     {% if messages %}
     <ul class="messages">
       {% for message in messages %}
@@ -89,10 +90,13 @@
       {% endfor %}
     </ul>
     {% endif %}
-    {%block content%}
+    
+    <div class="content_padding">
+      {%block content%}
      
-    {%endblock%}
-
+      {%endblock%}
+    </div>
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
