--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
@@ -35,7 +35,7 @@
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-end mb-md-0">
               <li><a href="{% url 'main:home' %}" class="nav-link px-2 text-secondary">Home</a></li>
               <li><a href="{% url 'main:posts' %}" class="nav-link px-2 text-white">Posts</a></li>
-              <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
+              <li><a href="{% url 'main:features' %}" class="nav-link px-2 text-white">Features</a></li>
               <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
               <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
               <li><a href="#" class="nav-link px-2 text-white">About</a></li>
@@ -90,15 +90,22 @@
       {% endfor %}
     </ul>
     {% endif %}
-    
-    <div class="content_padding">
-      {%block content%}
-     
-      {%endblock%}
+    <div class="background_content_color ">
+      <div class="content_padding">
+        {%block content%}
+        {%endblock%}
+      </div>
     </div>
+
+    
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
+{% block footer %}
+    <div class="page-footer footer_color">
+
+    </div>
+{% endblock %}
 </html>
