--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.0/font/bootstrap-icons.css">
     {% load static %}
     <link rel="stylesheet" href="{% static 'posts.css' %}">
       <meta charset="UTF-8">
@@ -99,7 +100,7 @@
 
 
     <div class="background_content_color ">
-      <div class="content_padding">
+      <div class="content_padding content_height">
         {%block content%}
         {%endblock%}
       </div>
@@ -114,7 +115,14 @@
 </body>
 {% block footer %}
     <div class="page-footer footer_color">
-
+      
+      <a href="#">
+        <h2>
+          some footer
+          some footer
+        </h2>
+      </a>
+      
     </div>
 {% endblock %}
 </html>
