--- a/taskmanager/templates/main/profile_posts.html
+++ b/taskmanager/templates/main/profile_posts.html
@@ -16,10 +16,16 @@
                                         <h5>Posted by:{{post.author}}</h5>
                                     </div>
                                     <div class="align_right">
-                                        <h5>Posted : {{post.date_created}}</h5>
+                                        <h5>Posted : {{post.date_created}} *post_id:{{post.id}}*</h5>
                                     </div>
                                 </div>         
-
+                                {% if post.id == update_id  %}
+                                <form method="POST" action="{% url 'main:update_post' id=post.id %}">
+                                    {% csrf_token %}
+                                    {{form.as_p}}
+                                    <button type="submit" class="btn btn-primary" >Confirm</button>
+                                </form>
+                                {% else %}
                                 <a class="p-1 ml-4 align_center  " data-toggle="collapse" href="#collapsePostContent{{post.id}}" role="button">
                                     <h4>{{post.title}}</h4>
                                 </a>
@@ -27,6 +33,8 @@
                                 <div class="pb-2 p-1 collapse alas font-weight-normal px-4 align_center" id="collapsePostContent{{post.id}}">
                                     {{post.content}}
                                 </div>
+                                {% endif%}
+                                
                                 
                             </div>   
                         </div>
@@ -38,7 +46,7 @@
                                 </a>
                             </div>
                             <div class="thirty">
-                                <a href="#">
+                                <a href="{% url 'main:update_post' id=post.id %}">
                                     <i class="bi bi-pencil"style='font-size:20px;'></i>
                                 </a>
                             </div>
