--- a/taskmanager/templates/main/profile_posts.html
+++ b/taskmanager/templates/main/profile_posts.html
@@ -8,7 +8,7 @@
         <div class="col-6">
             <div class="infinite_container ">
                 {% for post in page.object_list %}
-                    <div class="d-flex infinite-item" id="infinite-item ">    
+                    <div class="d-flex infinite-item">    
                         <div class="card my-2 px-2 inline-fix">
                             <div class="d-flex flex-column" id="d-block">
                                 <div class="mb-auto p-1 d-flex  smouth_gray">
