--- a/static/posts.css
+++ b/static/posts.css
@@ -6,6 +6,7 @@
     padding-top: 80px;
 }
 
+
 .background_content_color {
   background-color:#eeeeee;
 }
@@ -18,6 +19,7 @@ body{
 }
 
 .img_cirqle{
+  max-width: 100px;
   border-radius: 50%;
 }
 
