remove img_cirqle class from user_favicon

--- a/taskmanager/templates/profile.html
+++ b/taskmanager/templates/profile.html
@@ -62,7 +62,7 @@
    let fav = document.getElementById('userFaviconDiv')
    let img = document.createElement('img')
    img.src = fav.childNodes[1].href
-   img.className = 'img_cirqle' 
+   img.className = '' 
    fav.appendChild(img)
    for(let i = 0;i<8;i++){
         fav.removeChild(fav.childNodes[0])
