remove img_cirqle class from user_favicon

--- a/taskmanager/templates/public_profile.html
+++ b/taskmanager/templates/public_profile.html
@@ -7,8 +7,8 @@
     <div class="row">
         <div class="col-4"></div>
         <div class="col-4 ">
-            <div class="card img_cirqle my-2">
-                <img class="img_cirqle mx-2 my-2" src="{{MEDIA_URL}}{{public_user.user_favicon}}">
+            <div class="card  my-2">
+                <img  class="  mx-2 my-2" src="{{MEDIA_URL}}{{public_user.user_favicon}}">
             </div>
             <div class="card my-2">
                 <h3 class="align_center">Post count: {{posts_count}}</h3>
