--- a/taskmanager/templates/main/posts.html
+++ b/taskmanager/templates/main/posts.html
@@ -4,8 +4,8 @@
 {%block content%}
 <div class="container">
     <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
+        <div class="col-2"></div>
+        <div  class="col-8">
 
             <div class="pb-4">
                 <div class="">
@@ -28,10 +28,21 @@
                 </div>
             </div>
             
-            <div class="infinite_container">
+            <div  class=" infinite_container">
                 {% for post in page.object_list %}
-                <div class="infinite-item">
-                    <div class="card my-4">
+                <div class="d-flex flex-row infinite-item">
+                    <div class="d-flex flex-column my-4 mx-4">
+                        <a class="smouth_gray" href="{% url 'main:public_profile' id=post.authorkey.id %}">
+                            <img class="image-fluid float-left img_cirqle mx-2 my-2" src="{{MEDIA_URL}}{{post.authorkey.user_favicon}}">
+                        </a>
+                        <h5>
+                            Posted by:
+                            <a class="smouth_gray" href="{% url 'main:public_profile' id=post.authorkey.id %}">
+                                {{post.authorkey.username}}
+                            </a>
+                        </h5>
+                    </div>
+                    <div class="d-flex card my-4">
                         <a class="pl-4 align_center" data-toggle="collapse" href="#collapsePostContent{{post.id}}" role="button">
                             <h4>{{post.title}}</h4>
                         </a>
@@ -58,6 +69,8 @@
                             </div>
                         </div>
                     </div>
+
+                    
                 </div>
                 
                 {% endfor %}
@@ -78,7 +91,7 @@
                 let infScroll = $infinite_container.data('infiniteScroll');
             </script>
         </div>
-        <div class="col-3"></div>
+        <div class="col-2"></div>
     </div>
 </div>
 {%endblock%} 
