added dropdown into main:profile_messages

--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -55,6 +55,7 @@
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'main:profile_update' %}">Profile</a>
                     <a class="dropdown-item" href="{% url 'main:profile_posts' %}">Your posts</a>
+                    <a class="dropdown-item" href="{% url 'main:profile_messages' %}">Messages</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                     <div class="dropdown-divider"></div>
