--- a/taskmanager/templates/main/posts.html
+++ b/taskmanager/templates/main/posts.html
@@ -2,96 +2,55 @@
 
 
 {%block content%}
-<div class="container">
-    <div class="row">
-        <div class="col-2"></div>
-        <div  class="col-8">
-
-            <div class="pb-4">
-                <div class="">
-                    <div class="row">
-                        <div class="col-3"></div>
-                        <div class="col-6 align_center">
-                            <a class="btn btn-primary" data-toggle="collapse" href="#collapsePostForm" role="button" aria-expanded="false" aria-controls="collapseExample">
-                                Create new post
-                            </a>
+<div class="_container">
+    <div class="new_post">
+        <a class="btn btn-primary" data-toggle="collapse" href="#collapsePostForm" role="button" aria-expanded="false" aria-controls="collapseExample">
+            Create new post
+        </a>
+        <div class="collapse" id="collapsePostForm">
+            <form method="POST" action="{% url 'main:posts'%}">
+                {% csrf_token %}
+                {{form.as_p}}
+                    <button type="submit" class="btn btn-primary " >Post</button>
+            </form>
+        </div>
+    </div>
+    <div class="infinite_container">
+        {% for post in page.object_list %}
+            <div  class="infinite-item">
+                <div class="post">
+                    <div  class="author">
+                        <a class="img" href="{% url 'main:public_profile' id=post.authorkey.id %}">
+                            <img class="img_cirqle" src="{{MEDIA_URL}}{{post.authorkey.user_favicon}}">
+                        </a>
+                        <a class="name" href="{% url 'main:public_profile' id=post.authorkey.id %}">
+                            {{post.authorkey.username}}
+                        </a>
+                    </div>
+                    <div class="content">
+                        <div class="title">
+                            {{post.title}}
                         </div>
-                        <div class="col-3"></div>
-                    </div>
-                    <div class="collapse align_right" id="collapsePostForm">
-                        <form method="POST" action="{% url 'main:posts'%}">
-                            {% csrf_token %}
-                            {{form.as_p}}
-                                <button type="submit" class="btn btn-primary " >Post</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            
-            <div  class=" infinite_container">
-                {% for post in page.object_list %}
-                <div class="d-flex flex-row infinite-item">
-                    <div class="d-flex flex-column my-4 mx-4">
-                        <a class="smouth_gray" href="{% url 'main:public_profile' id=post.authorkey.id %}">
-                            <img class="image-fluid float-left img_cirqle mx-2 my-2" src="{{MEDIA_URL}}{{post.authorkey.user_favicon}}">
-                        </a>
-                        <h5>
-                            Posted by:
-                            <a class="smouth_gray" href="{% url 'main:public_profile' id=post.authorkey.id %}">
-                                {{post.authorkey.username}}
-                            </a>
-                        </h5>
-                    </div>
-                    <div class="d-flex card my-4">
-                        <a class="pl-4 align_center" data-toggle="collapse" href="#collapsePostContent{{post.id}}" role="button">
-                            <h4>{{post.title}}</h4>
-                        </a>
-                        <div class="collapse alas font-weight-normal px-4 align_center" id="collapsePostContent{{post.id}}">
+                        <div class="text">
                             {{post.content}}
                         </div>
-                        <div> 
-                            <div class="row smouth_gray">
-                                <div class="col-1"></div>
-                                <div class="row col-10">
-                                    <div class="col-4">
-                                        <h5>
-                                            Posted by:
-                                            <a class="smouth_gray" href="{% url 'main:public_profile' id=post.authorkey.id %}">
-                                                {{post.authorkey.username}}
-                                            </a>
-                                        </h5>
-                                    </div>
-                                    <div class="col-8 align_right">
-                                        <h5>Posted : {{post.date_created}}</h5>
-                                    </div>
-                                </div>
-                                <div class="col-1"></div>
-                            </div>
+                        <div class="date">
+                            {{post.date_created}}
                         </div>
                     </div>
-
-                    
                 </div>
-                
-                {% endfor %}
             </div>
-
-            <div class="page-links">
-                {% if page.has_next %}
-                    <a class="infinite-more-link" 
-                    href="{% url 'main:posts' %}?page={{ page.next_page_number }}">
-                    </a>
-                {% endif %}
-            </div>
-            <script>
-                let $infinite_container = $('.infinite_container').infiniteScroll({
-                path: '.infinite-more-link',
-                append: '.infinite-item',
-                });
-                let infScroll = $infinite_container.data('infiniteScroll');
-            </script>
-        </div>
-        <div class="col-2"></div>
+        {% endfor %}
     </div>
+</div>
+
+
+<div class="page-links">
+    {% if page.has_next %}
+        <a class="infinite-more-link" 
+        href="{% url 'main:posts' %}?page={{ page.next_page_number }}">
+        </a>
+    {% endif %}
+</div>
 </div>
 {%endblock%} 
