--- a/taskmanager/templates/main/profile_posts.html
+++ b/taskmanager/templates/main/profile_posts.html
@@ -13,7 +13,7 @@
                             <div class="d-flex flex-column" id="d-block">
                                 <div class="mb-auto p-1 d-flex  smouth_gray">
                                     <div class="align_right">
-                                        <h5>Posted : {{post.date_created}} *post_id:{{post.id}}*</h5>
+                                        <h5>Posted : {{post.date_created}}</h5>
                                     </div>
                                 </div>         
                                 {% if post.id == update_id  %}
